--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
+    "ntwitter" : "https://github.com/sebhildebrandt/ntwitter/tarball/master",
     "hubot": ">= 2.5.1",
     "hubot-scripts": ">= 2.4.2",
     "hubot-hipchat": "~2.5.1-5"
