--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "ntwitter" : "https://github.com/sebhildebrandt/ntwitter/tarball/master",
+    "ntwitter": "https://github.com/sebhildebrandt/ntwitter/tarball/master",
     "hubot": ">= 2.5.1",
     "hubot-scripts": ">= 2.4.2",
-    "hubot-hipchat": "~2.5.1-5"
+    "hubot-hipchat": "~2.5.1-5",
+    "cheerio": "~0.12.3"
   },
   "engines": {
     "node": ">= 0.8.x",
