--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hubot": ">= 2.5.1",
     "hubot-scripts": ">= 2.4.2",
     "hubot-hipchat": "~2.5.1-5",
-    "cheerio": "~0.12.3"
+    "cheerio": "~0.12.3",
+    "hubot-url-title": "~1.1.0"
   },
   "engines": {
     "node": ">= 0.8.x",
