--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "cheerio": "~0.12.3",
+    "hipchatter": "^0.1.3",
     "hubot": ">= 2.5.1",
     "hubot-hipchat": "~2.5.1-5",
     "hubot-ping-standup": "0.0.3",
