--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "hipchatter": "^0.1.3",
     "hubot": ">= 2.5.1",
     "hubot-hipchat": "~2.5.1-5",
-    "hubot-ping-standup": "0.0.3",
     "hubot-scripts": ">= 2.4.2",
+    "hubot-standup-alarm": "0.0.3",
     "hubot-url-title": "~1.2.0",
     "ntwitter": "https://github.com/sebhildebrandt/ntwitter/tarball/master"
   },
