--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "cheerio": "~0.12.3",
+    "cheerio": "^0.12.4",
     "hipchatter": "^0.1.3",
     "hubot": ">= 2.5.1",
-    "hubot-hipchat": "~2.5.1-5",
+    "hubot-hipchat": "^2.5.1-5",
     "hubot-scripts": ">= 2.4.2",
     "hubot-standup-alarm": "0.0.3",
     "ntwitter": "https://github.com/sebhildebrandt/ntwitter/tarball/master"
