Use hubot-url-title 1.2.1
Close #6.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hubot-hipchat": "~2.5.1-5",
     "hubot-scripts": ">= 2.4.2",
     "hubot-standup-alarm": "0.0.3",
+    "hubot-url-title": "^1.2.1",
     "ntwitter": "https://github.com/sebhildebrandt/ntwitter/tarball/master"
   },
   "engines": {
