--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "dependencies": {
     "cheerio": "~0.12.3",
-    "hipchatter": "^0.1.3",
+    "hipchatter": "^0.2.0",
     "hubot": ">= 2.5.1",
-    "hubot-hipchat": "~2.5.1-5",
+    "hubot-hipchat": "~2.12.0",
     "hubot-scripts": ">= 2.4.2",
     "hubot-standup-alarm": "0.0.3",
     "hubot-url-title": "^1.2.1",
