--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "cheerio": "~0.12.3",
+    "cheerio": "^0.19.0",
     "hipchatter": "^0.2.0",
     "hubot": ">= 2.5.1",
-    "hubot-hipchat": "~2.12.0",
+    "hubot-hipchat": "^2.12.0-5",
     "hubot-scripts": ">= 2.4.2",
-    "hubot-standup-alarm": "0.0.3",
+    "hubot-standup-alarm": "0.0.6",
     "hubot-url-title": "^1.2.1",
     "ntwitter": "https://github.com/sebhildebrandt/ntwitter/tarball/master"
   },
