--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "hipchatter": "^0.2.0",
-    "hubot": ">= 2.5.1",
-    "hubot-hipchat": "^2.12.0-5",
-    "hubot-scripts": ">= 2.4.2",
-    "hubot-standup-alarm": "0.0.6",
+    "hubot": "^2.17.0",
+    "hubot-hipchat": "^2.12.0",
+    "hubot-scripts": "^2.16.2",
+    "hubot-standup-alarm": "0.0.7",
     "hubot-url-title": "^1.2.1",
     "ntwitter": "https://github.com/sebhildebrandt/ntwitter/tarball/master"
   },
