Use correct license format
To remove warning: "npm WARN hosted-hubot@2.5.1 No license field."

https://docs.npmjs.com/files/package.json#license

> Some old packages used license objects or a "licenses" property containing an array of license objects:
> ...
> Those styles are now deprecated. Instead, use SPDX expressions, like this:

--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "bot"
   ],
   "description": "A simple helpful robot for your Company",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://github.com/github/hubot/raw/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/github/hubot.git"
